--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="container">
-        <div class="weather">weather</div>
+        <div class="weather"></div>
 
         <form id="weather-form">
             <input type="text" id="city-input" placeholder="Enter a city" />
